--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="./boot.css">
     <link rel="stylesheet" href="/style.css">
-   
+
 </head>
 
 <body>
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
-                    <h1>Become a <span class="text-warning">Web Developer</span></h1>
+                    <h1 style="margin-top:40px">Become a <span class="text-warning">Web Developer</span></h1>
                     <p class="lead my-4">We Focus on teaching our students the fundamentals of the
                         latest and greatest technologies to prepare them for their first dev role.</p>
                     <button class="btn btn-primary btn-lg">Start The Enrollment </button>
